--- a/pages/faqja1.html
+++ b/pages/faqja1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orbico</title>
-    <link rel="stylesheet" href="../faqja1.css">
+    <link rel="stylesheet" href="../Styles/faqja1.css">
     <a class="href" href="./faqja2.html">faqja tjeter</a>
 </head>
 <body>
