spo di tash qa me bo

--- a/pages/faqja2.html
+++ b/pages/faqja2.html
@@ -21,7 +21,7 @@
       <h1>Kjo eshte faqja ku ne shesim parfima</h1>
 
     <div class="div">
-      <div class="produkti">
+      <div class="produkti1">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0jaNGZurR0eD04YKQlZUAHt35r54v5190mw&s" alt="">
         <h2>Tomford Lost Cherry</h2>
         <p>Ky eshte nje parfum qe ka aromen si te qershise dhe vanilles.Qendrueshmeria e tij zgjat nga 8-10 ore.</p>
@@ -29,7 +29,7 @@
         <button>Bleje</button>
       </div>
 
-      <div class="produkti">
+      <div class="produkti1">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdGzyXPC48BFXDamhceI8audTBI4W7jFgLdA&s" alt="">
         <h2>Tomford Neroli Portofino</h2>
         <p>Ky eshte nje parfum qe ka shijen shume freskuese detare.Qendrueshmeria e tij zgjat nga 4-6 ore.</p>
